Get game names using semaphore
