# internal/controller/restapi/v1/models.go
@@ -4,3 +4,8 @@ type ModlistSummaryResponse struct {
 	ModlistName  string `json:"Name"`
 	ArchivesLink string `json:"link"`
 }
+
+type RepositoryResponse struct {
+	Name string
+	Link string
+}
